<resources>
    <string name="app_name">Heins Components</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="glide_image_view">GlideImageView</string>
    <string name="materials_item_row">MaterialsItemRow</string>
    <string name="materials_switcher_row">MaterialsSwitcherRow</string>
    <string name="set_uri">Set URI</string>
    <string name="clear">Clear</string>
    <string name="attachment">Attachment</string>
    <string name="attachment_file">Yourfile.pdf</string>
    <string name="cloud">Cloud</string>
    <string name="cloud_file">YourCloudFile.pdf</string>
    <string name="github">Github</string>
    <string name="error">Error</string>



    <string name="github_url">https://github.com/maiconhellmann/heins-input-dialogs</string>
</resources>
